tests/agl/rejections/type/cast_record_to_json.agl
record R
  x: int
let r = R(x = 1)
let j: json = r as json
